--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ a{
     padding-right:0;
 }
 .entire-content{
-    background-color: #eeeeee;
+    background-image: url(../images/so-white.png);
     /* background-image */
     margin:0 auto;
     padding:30px 0 90px 0;
@@ -101,7 +101,7 @@ p{
 footer{
     height:50px;
     background-color: #666666;
-    border-top: 5px solid #4aaaa5;
+    border-top: 8px solid #4aaaa5;
 }
 
 /* style for contact form */
@@ -122,4 +122,21 @@ input.submit{
     color: #ffffff;
     font-size:16px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+/* style for gallery image */
+.gallery-image{
+    height:320px;
+    width: 240px;
+    float: left;
+}
+/* put text on top of gallery image */
+.container{
+    position: relative;
+}
+.text-on-image{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
