change background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ a{
     padding-right:0;
 }
 .entire-content{
-    background-image: url(../images/so-white.png);
+    background-image: url(../images/trees.png);
     /* background-image */
     margin:0 auto;
     padding:30px 0 90px 0;
