--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,147 +1,166 @@
-#title-area{
-    margin:0 auto;
-    display: block;
-    line-height:96px;
-    height: 96px;
-    width: 30%;
-    float: left;
+#title-area {
+  margin: 0 auto;
+  display: block;
+  line-height: 96px;
+  height: 96px;
+  width: 30%;
+  float: left;
 }
-#title{
-    margin:0 auto;
-    background-color: #4aaaa5;
-    padding: 0px 40px 0px 40px;
-    color: #ffffff; 
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+#title {
+  margin: 0 auto;
+  background-color: #4aaaa5;
+  padding: 0px 40px 0px 40px;
+  color: #ffffff;
+  text-align: center;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-.header{
-    overflow: hidden;
-    background-color: #ffffff; 
-    border-bottom: 2px solid #cccccc;  
+.header {
+  overflow: hidden;
+  background-color: #ffffff;
+  border-bottom: 2px solid #cccccc;
 }
-.wrap{
-    width:960px;
-    margin: 0 auto;
-    background-color: #ffffff;
+.wrap {
+  width: 960px;
+  margin: 0 auto;
+  background-color: #ffffff;
 }
-#main-content{
-    border: 1px solid #dddddd;
-    padding: 25px;
-    width: 910px;
-    margin-top: 30px;
-
-}
-
-#main-content.wrap{
-    margin-top:0;
+#main-content {
+  border: 1px solid #dddddd;
+  padding: 25px;
+  width: 910px;
+  margin-top: 30px;
 }
 
-nav{
-    margin:0 auto;
-    line-height: 96px;
-    height: 96px;
-    width: 35%;
-    float: right;
-    background-color: #ffffff;
-    
-
-}
-ul{
-    margin:0 auto;
-    padding-right:0;
-}
-nav li{
-    display: inline;
-    text-align: right;
-    padding-right: 0;
-}
-img#profile-image{
-    float: left;
-    margin: 20px 20px 20px 0;
-}
-.clearfix::after{
-    content: "";
-    clear: both;
-    display: table;
+#main-content.wrap {
+  margin-top: 0;
 }
 
-a{
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #777777;
-    padding: 0 20px 0 20px;
-    border-left: 1px solid #dddddd;
+nav {
+  margin: 0 auto;
+  line-height: 96px;
+  height: 96px;
+  width: 35%;
+  float: right;
+  background-color: #ffffff;
 }
-#nav-start{
-    border-left: 0;
+ul {
+  margin: 0 auto;
+  padding-right: 0;
 }
-#nav-end{
-    padding-right:0;
+nav li {
+  display: inline;
+  text-align: right;
+  padding-right: 0;
 }
-.entire-content{
-    background-image: url(../images/trees.png);
-    /* background-image */
-    margin:0 auto;
-    padding:30px 0 90px 0;
+img#profile-image {
+  float: left;
+  margin: 20px 20px 20px 0;
 }
-.subtitle-area{
-    border-bottom: 2px solid #cccccc;
-}
-.subtitle{
-    color: #4aaaa5;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    padding-left: 20px;
-}
-p{
-    color: #777777;
-    font-family: Arial, Helvetica, sans-serif;
-
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
-footer{
-    height:50px;
-    background-color: #666666;
-    border-top: 8px solid #4aaaa5;
+a {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #777777;
+  padding: 0 20px 0 20px;
+  border-left: 1px solid #dddddd;
+}
+#nav-start {
+  border-left: 0;
+}
+#nav-end {
+  padding-right: 0;
+}
+.entire-content {
+  background-image: url(../images/trees.png);
+  /* background-image */
+  margin: 0 auto;
+  padding: 30px 0 90px 0;
+}
+.subtitle-area {
+  border-bottom: 2px solid #cccccc;
+}
+.subtitle {
+  color: #4aaaa5;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  padding-left: 20px;
+}
+p {
+  color: #777777;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+footer {
+  height: 50px;
+  background-color: #666666;
+  border-top: 8px solid #4aaaa5;
 }
 
 /* style for contact form */
-input.inputform{
-    width: 100%;
-    height: 30px;
+input.inputform {
+  width: 100%;
+  height: 30px;
 }
-input#message{
-    height: 200px;
-    margin-bottom: 10px;
+input#message {
+  height: 200px;
+  margin-bottom: 10px;
 }
-p.label{
-    margin-bottom: 0;
+p.label {
+  margin-bottom: 0;
 }
-input.submit{
-    background-color: #4aaaa5;
-    padding: 10px 20px;
-    color: #ffffff;
-    font-size:16px;
-    font-family: Arial, Helvetica, sans-serif;
+input.submit {
+  background-color: #4aaaa5;
+  padding: 10px 20px;
+  color: #ffffff;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* style for gallery image */
-.gallery-image{
-    height:320px;
-    width: 240px;
-    margin: 30px 40px 30px 0;
+.gallery-image {
+  height: 320px;
+  width: 240px;
+  margin: 30px 40px 30px 0;
 }
 /* put text on top of gallery image */
-.container{
-    position: relative;
-    float:left;
+.container {
+  position: relative;
+  float: left;
 }
-.text-block{
-    position: absolute;
-    bottom: 60px;
-    background-color: #4aaaa5;
-    padding: 0 25px;
-    color: #ffffff;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 190px;
+.text-block {
+  position: absolute;
+  bottom: 60px;
+  background-color: #4aaaa5;
+  padding: 0 25px;
+  color: #ffffff;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 190px;
+}
+
+/* change text color when hovered */
+a:hover {
+  /* choose a close color with color wheel */
+  color: #4ca8c2;
+}
+/* sticky footer*/
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+.wrapper {
+  min-height: 100%;
+
+  /* Equal to height of footer */
+  /* But also accounting for potential margin-bottom of last child */
+  margin-bottom: -50px;
+}
+.footer,
+.push {
+  height: 50px;
 }
