remove in-line style forprofile img in html to css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,8 @@ nav li {
 img#profile-image {
   float: left;
   margin: 20px 20px 20px 0;
+  height: 160px;
+  width: 120px;
 }
 .clearfix::after {
   content: "";
