--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,12 +201,20 @@ body {
   #title {
     width: 100%;
     margin: 0;
+    padding: 0;
+  }
+  ul {
+    padding: 0;
+    margin: 0;
   }
   nav {
     width: 100%;
     margin: 0;
     float: none;
     text-align: center;
+  }
+  #nav-end {
+    padding-right: 20px;
   }
   #title-area {
     float: none;
