add image and link to word guess game to Portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,6 +238,10 @@ body {
     height: auto;
   }
 }
+.container-right {
+  display: flex;
+  justify-content: flex-end;
+}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
